--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: home
 		<h3>Mechanical Engineer with Developer Soul and Data Mindset</h3>
 	  <h3>I love all related to mathematics, computer science and robotics.</h3>
 	  <h3>Have a look at some of my working <a href="{{ site.baseurl }}projects.html"> projects</a>.</h3>
-	  <h3>For more information, check out my academic &amp; professional <a href="https://1drv.ms/b/s!ApWwAcaDTgvNjkGs-yqJn_NyohD5?e=0mLFQi">Resume</a>.</h3>
+	  <h3>For more information, check out my academic &amp; professional <a href="https://mouseonthekeys.github.io/cv/">Resume</a>.</h3>
 	  <h3>Contact me by <a href="mailto:{{ site.email }}">email</a> or on any social network below.</h3>
 	  {% include social.html %}
 	</div>
