still writting welcome message

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ layout: home
 		<img class="img-circle" src="{{ site.baseurl }}static/img/{{ site.avatar }}" alt="Responsive image">
 	  </div>
 	  <h1>I'm <strong>{{ site.author }}</strong></h1>
-	  <h3>Data engineer who is well-versed in data architecture, data werhousing, big data technologies and AWS Certified Solution Architect</h3>
-	  <h3>Expert in data visualization and analytics, with the ability to turn raw data into actionable insights.</h3>
+	  <h3>Data engineer who is well-versed in data architecture, data werhousing, big data technologies and AWS Certified</h3>
+	  <!--<h3> Write something</h3>-->
 	  <h3>Have a look at some of my working <a href="{{ site.baseurl }}projects.html"> projects</a>.</h3>
 	  <h3>For more information, check out my academic &amp; professional <a href="https://mouseonthekeys.github.io/cv/">Resume</a>.</h3>
 	  <h3>Contact me by <a href="mailto:{{ site.email }}">email</a> or on any social network below.</h3>
